--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@
 	}
 
 	.list-skill-item h3{
+		display: inline-block;
 		/*background-color: steelblue;*/
 		font-size: 1.2em;
 		letter-spacing: 1px;
