--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 		align-items: center;
 		width: 100%;
 		height: 75px;
-		padding: 0 10%;
+		padding: 0 30px;
 		background-color: white;
 		box-shadow: 1px 1px 3px #ddd;
 	}
@@ -30,7 +30,7 @@
 		width: 50%;
 		justify-content: center;
 		align-items: center;
-		/*background-color: whitesmoke;*/
+		background-color: whitesmoke;
 	}
 
 	.container-nav-link a{
@@ -98,7 +98,7 @@
 		grid-template-columns: repeat(auto-fill, 150px);
 		grid-auto-rows: 150px;
 		grid-gap: 40px;
-		place-content: space-evenly;
+		place-content: center;
 		/*grid-gap: 40px;*/
 	/*	place-content: space-evenly;*/
 		/*place-items: center;*/
@@ -181,12 +181,16 @@
 		/*border: 1px solid #ddd;*/
 	}
 
-	#Portofolio{
-		background-color: whitesmoke;
+	#about-section{
+		background-color: white;
 	}
 
-	#Contact{
+	#portofolio-section{
 		background-color: white;
+	}
+
+	#contact-section{
+		background-color: whitesmoke;
 	}
 
 
