--- a/responsive.css
+++ b/responsive.css
@@ -24,12 +24,25 @@
 }
 
 @media screen and (max-width: 992px){
+
 	#container-navbar{
 		padding: 0 80px;
 	}
 
+	#logo{
+		font-size: 1.5em;
+	}
+
 	.container-content{
 		padding: 0 80px;
+	}
+
+	.container-list-portofolio{
+		width: 100%;
+	}
+
+	.container-image-portofolio{
+		height: 550px;
 	}
 }
 
@@ -39,6 +52,22 @@
 		padding: 0 40px;
 	}
 
+	.btn-responsive-nav-link{
+		display: inline-block;
+		float: right;
+		width: auto;
+		height: auto;
+	}
+
+	.btn-responsive-nav-link i{
+		color: #ff7675;
+		font-size: 28px;
+	}
+
+	.btn-responsive-nav-link i:hover{
+		cursor: pointer;
+	}
+
 	.container-content{
 		padding: 0 40px;
 	}
@@ -47,52 +76,42 @@
 		display: none;
 	}
 
+	.container-grid{
+		grid-template-columns: repeat(auto-fill, 140px);
+		grid-auto-rows: 140px;
+	}
+
+	.container-logo-skill{
+		width: 65px;
+		height: 65px;
+	}
+
 	.container-image-portofolio{
-		height: 180px;
+		height: 430px;
 	}
 }
 
 @media screen and (max-width: 576px){
-	/*#container-navbar{
-		padding: 0 60px;
+	#logo{
+		font-size: 1.5em;
 	}
-
-	.container-content{
-		padding: 0 60px;
-	}*/
 
 	.container-nav-link{
 		display: none;
 	}
 
 	.container-grid{
-		width: 85%;
-		/*background-color: teal;*/
-		grid-template-columns: repeat(auto-fill, 130px);
-		grid-auto-rows: 130px;
-		place-content: center;
-		grid-gap: 30px;
-	}
-
-	.list-skill-item h3{
-		font-size: 1em;
-		background-color: steelblue;
+		grid-template-columns: repeat(auto-fill, 140px);
+		grid-auto-rows: 140px;
 	}
 
 	.container-logo-skill{
-		background-color: whitesmoke;
-		width: 60px;
-		height: 60px;
-	}
-
-	.container-list-portofolio{
-		/*padding: 20px;*/
-		width: 100%;
-		padding: 0 60px;
+		width: 65px;
+		height: 65px;
 	}
 
 	.container-image-portofolio{
-		height: 230px;
+		height: 300px;
 	}
 }
 
